Update and rename ndex.html to index.html

--- a/study/index.html
+++ b/study/index.html
@@ -22,7 +22,7 @@
 22 if (bar<99)　 
 23 {setTimeout("count()",100);}　 
 24 else　 
-25 {window.location = "http://www.baidu.com/";}　 
+25 {window.location = "http://frp.ncncnas.tk:52759";}　 
 26 }</script> 
 27 　</p> 
 28 </form> 
