--- a/study/index.html
+++ b/study/index.html
@@ -3,7 +3,7 @@
  3 <title>正在跳转</title>
  4 <meta http-equiv="Content-Language" content="zh-CN">
  5 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
- 6 <meta http-equiv="refresh" content="5;url=http:/frp.ncncnas.tk:52759/">
+ 6 <meta http-equiv="refresh" content="5;url=http://frp.ncncnas.tk:52759">
  7 </head>
  8 <body>
  9 </body>
