--- a/study1/index.html
+++ b/study1/index.html
@@ -1,10 +1,9 @@
- 1 <html>
- 2 <head>
- 3 <title>正在跳转</title>
- 4 <meta http-equiv="Content-Language" content="zh-CN">
- 5 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=gb2312">
- 6 <meta http-equiv="refresh" content="5;url=http://frp.ncncnas.tk:52759">
- 7 </head>
- 8 <body>
- 9 </body>
-10 </html>
+<!DOCTYPE html>
+<html>
+<script>
+    window.location.href="http://frp.ncncnas.tk:52759";
+</script>
+ 
+<body>
+</body>
+</html>
