--- a/study1/index.html
+++ b/study1/index.html
@@ -1,6 +1,6 @@
 <html>
 <script>
-    window.location.href="http://frp.ncncnas.tk:52759";
+    window.location.href="http://frp.ncncnas.tk";
 </script>
  
 <body>
