--- a/study3/index.html
+++ b/study3/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="refresh" content="6;url=http://qg.ncncnas.tk">
+<meta http-equiv="refresh" content="6;url=http://tvbox.ncncjd.ga:55313">
 <title>(,,･∀･)ﾉ゛hello</title>
 <style>
 *{margin:0;padding:0;color:#444}
